--- a/solutions/index.html
+++ b/solutions/index.html
@@ -7,13 +7,21 @@
   </head>
   <body>
 
-    <p>Link the desired JavaScript file at the bottom of this index.html file's body, and save your change.</p>
-    <p>Open your console!</p>
-    <p>You should see a message saying your JavaScript has loaded.</p>
+    <p class = 'paragraph' id = 'first'>Link the desired JavaScript file at the bottom of this index.html file's body, and save your change.</p>
+    <p class = 'paragraph' id ="second">Open your console!</p>
+    <p class = 'paragraph' id = "third">You should see a message saying your JavaScript has loaded.</p>
 
-    <!-- <script type="text/javascript" src="login.js"></script> -->
-    <!-- <script type="text/javascript" src="security_questions.js"></script> -->
-    <!-- <script type="text/javascript" src="sing.js"></script> -->
+    <script>
+      var paragraphs = document.getElementsByClassName('paragraph');
+      var first = document.getElementById('first');
+      var second = document.getElementById('second');
+      var third = document.getElementById('third');
+      for (i = 0; i < paragraphs.length; i++){
+        paragraphs[i].innerHTML = 'New paragraph content.';
+        paragraphs[i].className = 'pretty paragraph';
+
+      }
+    </script>
 
   </body>
 </html>
